--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.3.2",
     "next": "13.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
   }
 }
